--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
           class="form-check-input"
           type="radio"
           name="flexRadioDefault"
-          id="flexRadioDefault2"
+          id="flexRadioDefault3"
         />
-        <label class="form-check-label" for="flexRadioDefault2">
+        <label class="form-check-label" for="flexRadioDefault3">
           Prefiro não informar
         </label>
       </div>
@@ -102,9 +102,9 @@
           class="form-check-input"
           type="checkbox"
           role="switch"
-          id="flexSwitchCheckDefault"
+          id="flexSwitchCheckDefault1"
         />
-        <label class="form-check-label" for="flexSwitchCheckDefault"
+        <label class="form-check-label" for="flexSwitchCheckDefault1"
           >Treinamento básico de astronauta</label
         >
       </div>
@@ -113,9 +113,9 @@
           class="form-check-input"
           type="checkbox"
           role="switch"
-          id="flexSwitchCheckChecked"
+          id="flexSwitchCheckChecked2"
         />
-        <label class="form-check-label" for="flexSwitchCheckChecked"
+        <label class="form-check-label" for="flexSwitchCheckChecked2"
           >Treinamento físico básico</label
         >
       </div>
@@ -124,9 +124,9 @@
           class="form-check-input"
           type="checkbox"
           role="switch"
-          id="flexSwitchCheckDefault"
+          id="flexSwitchCheckDefault3"
         />
-        <label class="form-check-label" for="flexSwitchCheckDefault"
+        <label class="form-check-label" for="flexSwitchCheckDefault3"
           >Treinamento avançado de astronauta</label
         >
       </div>
@@ -135,9 +135,9 @@
           class="form-check-input"
           type="checkbox"
           role="switch"
-          id="flexSwitchCheckChecked"
+          id="flexSwitchCheckChecked4"
         />
-        <label class="form-check-label" for="flexSwitchCheckChecked"
+        <label class="form-check-label" for="flexSwitchCheckChecked4"
           >Treinamento físico intenso</label
         >
       </div>
